feat: chat screen

--- a/app/output.css
+++ b/app/output.css
@@ -567,6 +567,10 @@ video {
   margin-top: 1.5rem;
 }
 
+.block {
+  display: block;
+}
+
 .inline {
   display: inline;
 }
@@ -577,6 +581,10 @@ video {
 
 .inline-flex {
   display: inline-flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .h-4 {
@@ -639,8 +647,20 @@ video {
   width: 5rem;
 }
 
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.max-w-prose {
+  max-width: 65ch;
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.content-center {
+  align-content: center;
 }
 
 .items-center {
@@ -681,6 +701,14 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.text-ellipsis {
+  text-overflow: ellipsis;
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 
 .rounded-full {
@@ -861,6 +889,16 @@ video {
 .text-secondary {
   --tw-text-opacity: 1;
   color: rgb(255 254 255 / var(--tw-text-opacity));
+}
+
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .before\:pointer-events-none::before {
