--- a/app/output.css
+++ b/app/output.css
@@ -831,6 +831,10 @@ body {
   height: 24rem;
 }
 
+.h-\[1rem\] {
+  height: 1rem;
+}
+
 .h-\[3\.25rem\] {
   height: 3.25rem;
 }
@@ -894,6 +898,10 @@ body {
 
 .w-6 {
   width: 1.5rem;
+}
+
+.w-\[1rem\] {
+  width: 1rem;
 }
 
 .w-\[80px\] {
