--- a/app/output.css
+++ b/app/output.css
@@ -852,6 +852,14 @@ body {
   height: 100vh;
 }
 
+.max-h-\[450px\] {
+  max-height: 450px;
+}
+
+.min-h-\[320px\] {
+  min-height: 320px;
+}
+
 .w-0 {
   width: 0px;
 }
@@ -894,6 +902,10 @@ body {
 
 .w-\[1rem\] {
   width: 1rem;
+}
+
+.w-\[60\%\] {
+  width: 60%;
 }
 
 .w-\[80px\] {
@@ -984,6 +996,16 @@ body {
   animation: popOut 200ms ease-out;
 }
 
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
 @keyframes spin {
   to {
     transform: rotate(360deg);
@@ -1056,6 +1078,10 @@ body {
 
 .justify-around {
   justify-content: space-around;
+}
+
+.gap-14 {
+  gap: 3.5rem;
 }
 
 .gap-2 {
@@ -1283,9 +1309,18 @@ body {
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
 .bg-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(93 95 239 / var(--tw-bg-opacity));
+}
+
+.bg-primary\/10 {
+  background-color: rgb(93 95 239 / 0.1);
 }
 
 .bg-red-500 {
@@ -1904,6 +1939,11 @@ body {
   --tw-enter-translate-y: -48%;
 }
 
+:is(.dark .dark\:bg-gray-700) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
 :is(.dark .dark\:fill-black) {
   fill: #000;
 }
@@ -1946,6 +1986,10 @@ body {
 }
 
 @media (min-width: 640px) {
+  .sm\:max-h-\[300px\] {
+    max-height: 300px;
+  }
+
   .sm\:max-w-\[425px\] {
     max-width: 425px;
   }
